<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Case3Activity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cas_3"
        android:layout_gravity="center_horizontal"
        android:textSize="40sp"/>

    <TextView
        android:id="@+id/pseudoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pseudo"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:textSize="16sp"
        android:labelFor="@+id/pseudoEdit"/>

    <EditText
        android:id="@+id/pseudoEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="text"
        android:textSize="16sp"
        android:autofillHints="username"
        />

    <TextView
        android:id="@+id/pseudoValidation"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp" />

    <Button
        android:id="@+id/validateButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:text="@string/validate"
        android:textSize="16sp"/>

</LinearLayout>